--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
   <section id="contact" class="section">
     <h2>📬 Contact Me</h2>
     <p>Want to collaborate or ask something? Reach out:</p>
-    <p>Email: <a href="mailto:nameforge.rf.gd@gmail.com">nameforge.rf.gd@gmail.com</a></p>
+    <p>Email: <a href="mailto:support@anveshraman.rf.gd">support@anveshraman.rf.gd</a></p>
     <p>GitHub: <a href="https://github.com/NameForge-Free-Doamin" target="_blank">@NameForge-Free-Doamin</a></p>
   </section>
 
   <footer>
-    <p>© 2025 SA — Built with ❤️ and GitHub</p>
+    <p>© 2025 Developer AnveshRaman Built with ❤️ and GitHub</p>
   </footer>
 
 </body>
