--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <section class="contact">
     <h2>Contact</h2>
-    <p>Reach me via email: <a href="mailto:anveshraman.rf.gd@gmail.com">anveshraman.rf.gd@gmail.com</a></p>
+    <p>Reach me via email: <a href="mailto:support@anveshraman.rf.gd">support@anveshraman.rf.gd</a></p>
   </section>
 
   <footer>
