--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Anvesh Raman — Portfolio</title>
+  <title>Developer AnveshRaman — Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="hero">
     <img src="your-logo.png" alt="Anvesh Raman Logo" class="logo" />
-    <h1>Anvesh Raman</h1>
+    <h1>Developer AnveshRaman</h1>
     <p>Developer • Builder • Creator</p>
   </header>
 
