--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <a href="https://nameforge.rf.gd" target="_blank">Visit</a>
       </div>
       <div class="project">
+        <h3>Mail-Template</h3>
+        <p>Free, open-source, responsive email templates for developers, startups, and communities.</p>
+        <a href="https://mail.template.ct.ws" target="_blank">Visit</a>
+      </div>
+      <div class="project">
         <h3>DNS Updater</h3>
         <p>Automates InfinityFree DNS CNAME updates from GitHub PRs using Python + browser automation.</p>
         <a href="#">View Code</a>
