--- a/index.html
+++ b/index.html
@@ -24,25 +24,61 @@
   <section class="projects">
     <h2>Projects</h2>
     <div class="project-list">
+
       <div class="project">
         <h3>NameForge</h3>
         <p>A free, community-driven subdomain registry inspired by js.org.</p>
         <a href="https://nameforge.rf.gd" target="_blank">Visit</a>
       </div>
+
       <div class="project">
         <h3>Mail-Template</h3>
         <p>Free, open-source, responsive email templates for developers, startups, and communities.</p>
         <a href="https://mail.template.ct.ws" target="_blank">Visit</a>
       </div>
+
       <div class="project">
         <h3>DNS Updater</h3>
         <p>Automates InfinityFree DNS CNAME updates from GitHub PRs using Python + browser automation.</p>
         <a href="#">View Code</a>
       </div>
+
       <div class="project">
         <h3>Portfolio System</h3>
         <p>This portfolio itself — built with ❤️ and styled for impact.</p>
       </div>
+
+      <!-- 🔥 New Projects Added -->
+      <div class="project">
+        <h3>Task-Manager</h3>
+        <p>A task management web app where admins can add/remove tasks, and users can mark them completed.</p>
+        <a href="https://github.com/developeranveshraman/Task-Manager" target="_blank">View Code</a>
+      </div>
+
+      <div class="project">
+        <h3>YouTube Analytics</h3>
+        <p>An analytics dashboard for creators to track growth, engagement, and audience insights.</p>
+        <a href="https://github.com/developeranveshraman/YouTube-Analytics" target="_blank">View Code</a>
+      </div>
+
+      <div class="project">
+        <h3>Air Mouse Controller</h3>
+        <p>A webcam-based hand-tracking system that moves the mouse with hand gestures.</p>
+        <a href="https://github.com/developeranveshraman/Air-Mouse-Controller" target="_blank">View Code</a>
+      </div>
+
+      <div class="project">
+        <h3>AnveshAI</h3>
+        <p>A multi-feature AI platform with image generation, chat bot, and agent system.</p>
+        <a href="https://github.com/developeranveshraman/AnveshAI" target="_blank">View Code</a>
+      </div>
+
+      <div class="project">
+        <h3>Adult Content Image Detector</h3>
+        <p>A Python-based tool for detecting adult content in images, designed for content moderation and safety.</p>
+        <a href="https://github.com/developeranveshraman/Adult-Content-Image-Detector" target="_blank">View Code</a>
+      </div>
+
     </div>
   </section>
 
