--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
   </header>
 
   <section class="about fade-in">
-    <h2>About Me</h2>
-    <p>
-      I'm a self-driven developer passionate about building impactful digital experiences.
-      From DNS automation to developer tools like NameForge, I turn ideas into real-world systems.
-    </p>
-  </section>
+  <h2>About Me</h2>
+  <p>
+    Hi, I’m <strong>Anvesh Raman</strong> — a passionate developer who loves turning ideas into
+    scalable digital products. I enjoy building tools that empower people, whether it’s
+    <em>NameForge</em> for community-driven domains, <em>AnveshAI</em> for creative AI solutions,
+    or systems like <em>Task-Manager</em> and <em>YouTube Analytics</em> that make life easier.
+  </p>
+  <p>
+    My journey started with curiosity — breaking down how apps and games work — and grew into
+    creating full-stack projects, automation systems, and AI-powered applications. Every project I build
+    is guided by one goal: to solve real problems with clean, impactful technology.
+  </p>
+  <p>
+    Currently, I’m exploring AI, developer tools, and real-time systems — while aspiring to
+    contribute to global-scale platforms and open-source communities.
+  </p>
+</section>
+
 
   <section class="projects fade-in">
     <h2>Projects</h2>
