--- a/index.html
+++ b/index.html
@@ -58,25 +58,25 @@
       <div class="project card">
         <h3>Task-Manager</h3>
         <p>A task management web app where admins can add/remove tasks, and users can mark them completed.</p>
-        <a href="https://github.com/developeranveshraman/Task-Manager" target="_blank">View Code</a>
+        <a href="https://github.com/developeranveshraman/task-manager" target="_blank">View Code</a>
       </div>
 
       <div class="project card">
         <h3>YouTube Analytics</h3>
         <p>An analytics dashboard for creators to track growth, engagement, and audience insights.</p>
-        <a href="https://github.com/developeranveshraman/YouTube-Analytics" target="_blank">View Code</a>
+        <a href="https://github.com/developeranveshraman/YouTube-Channel-Analytics" target="_blank">View Code</a>
       </div>
 
       <div class="project card">
         <h3>Air Mouse Controller</h3>
         <p>A webcam-based hand-tracking system that moves the mouse with hand gestures.</p>
-        <a href="https://github.com/developeranveshraman/Air-Mouse-Controller" target="_blank">View Code</a>
+        <a href="https://github.com/developeranveshraman/air-mouse-controler" target="_blank">View Code</a>
       </div>
 
       <div class="project card">
         <h3>AnveshAI</h3>
         <p>A multi-feature AI platform with image generation, chat bot, and agent system.</p>
-        <a href="https://github.com/developeranveshraman/AnveshAI" target="_blank">View Code</a>
+        <a href="https://github.com/AnveshAI" target="_blank">View Code</a>
       </div>
 
       <div class="project card">
